10.2.0.0 backlog 41352 warning while launching prd (#1670)
* [BACKLOG-41352] warning and error showing in log when launching PRD

* [BACKLOG-41352] warning and error showing in log when launching PRD in MAC OS